# sre-bot-strands

./: .env.example  .gitignore  .mcp.json  Dockerfile  INITIAL.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/agents/: library-docs-researcher.md  senior-systems-architect.md
.claude/commands/: create-pr.md  fix-github-issue.md  release-notes.md
.claude/hooks/: format_code.sh  security_check.sh
PRPs/: eks-agent-k3s-implementation.md  finops-agent-implementation.md  kubernetes-agent-k3s-support.md  strands-fastapi-slack-integration.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  coordinator_agent.py  eks_agent.py  finops_agent.py  kubernetes_agent.py  strands_agent.py
app/api/: health.py  routes.py
app/models/: schemas.py
app/services/: session_manager.py
app/static/: app.js  index.html  styles.css
k3s_data/kubeconfig/: kubeconfig.yaml
tests/: test_agent.py  test_api.py  test_coordinator.py  test_eks_agent.py  test_finops_agent.py  test_kubernetes_agent.py  test_web.py
